--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="cont-foto">
-
+            <img src="" alt="">
         </div>
 
         <h2 class="titulo-cancion">Starlit Reverie</h2>
@@ -36,16 +36,15 @@
         </div>
 
         <div class="botones">
-            <button><i class="bi bi-shuffle"></i></button>
-            <button><i class="bi bi-skip-start"></i></button>
-            <button><i class="bi bi-pause-fill"></i></button>
-            <button><i class="bi bi-skip-end-fill"></i></button>
-            <button><i class="bi bi-music-note-list"></i></button>
-            
+            <button class="btn1"><i class="bi bi-shuffle"></i></button>
+            <button class="btn2"><i class="bi bi-skip-start-fill"></i></button>
+            <button class="btn3"><i class="bi bi-pause-fill"></i></button>
+            <button class="btn2"><i class="bi bi-skip-end-fill"></i></button>
+            <button class="btn1"><i class="bi bi-music-note-list"></i></button>
+
         </div>
 
     </div>
-
 
 
 
