--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="cont-foto">
-            <img src="" alt="">
+            <img src="img/WhatsApp Image 2025-10-08 at 6.54.54 PM.jpeg" alt="">
         </div>
 
         <h2 class="titulo-cancion">Starlit Reverie</h2>
